crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__fuzzy_search_advanced-2.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: content1
snapshot_kind: text
---
class UserManager {
  async findUser(id, options = {}) {
    const user = await this.db.findOne({ userId: id, ...options });
    if (!user) throw new Error('User not found');
    return user;
  }
}
