crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__fuzzy_search_advanced.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: "TempDir::normalize(&result)"
snapshot_kind: text
---
<file_content path="[TEMP_DIR]/test.txt">
class UserManager {
  async findUser(id, options = {}) {
    const user = await this.db.findOne({ userId: id, ...options });
    if (!user) throw new Error('User not found');
    return user;
  }
}
</file_content>
